--- a/src/main/res/layout/item_default_child.xml
+++ b/src/main/res/layout/item_default_child.xml
@@ -5,9 +5,12 @@
               android:layout_height="wrap_content">
 
     <TextView
-        android:height="40dp"
+        android:layout_marginLeft="20dp"
+        android:height="50dp"
         android:padding="10dp"
         android:text="TextView"
+        android:textSize="15sp"
+        android:gravity="center|left"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title"/>
